tests/valid/module/use_core_option_type_enum.facet
use core::option::Option;

fn main() -> affine Option<affine isize> {
  Option<affine isize>::Some(1)
}
