tests/invalid/core/unqualified_option.facet
fn main() -> affine Option<affine isize> {
  Option::Some(1)
}
